re PR c++/11072 (Implementation of offsetof macro)

PR c++/11072
	* ginclude/stddef.h (offsetof): Remove cast to 'char &'. Explain why.
testsuite:
	PR c++/11072
	* g++.dg/other/offsetof2.C: XFAIL.
	* g++.dg/other/offsetof5.C: New.

From-SVN: r68831